Fix macOS dark mode

--- a/src/static/css/_layout.styl
+++ b/src/static/css/_layout.styl
@@ -23,7 +23,7 @@
   color colormode('dim-color')
   border-left 4px solid #ddd
 
-  @media (prefers-dark-interface)
+  @media (prefers-color-scheme: dark)
     color $dim-color-darkmode
 
 header span
@@ -33,5 +33,5 @@ header span
   letter-spacing 0.25px
   color colormode('dim-color')
 
-  @media (prefers-dark-interface)
+  @media (prefers-color-scheme: dark)
     color $dim-color-darkmode
